--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@sveltejs/adapter-node": "^5.2.11",
+		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/svelte-scroller": "^2.0.7",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
